# cuda-kernel-dev

./: CMakeLists.txt  README.md
matmuls/: pingpong_producer.cuh  split_k.cu  tensor_core_gemm.cu  tiledmatmul.cu
matmuls/fp8/: bench_marlin.py  split_k_fp8_blk_ptr.py  test_marlin.py
matmuls/fp8/marlin/: marlin_cuda.cpp  marlin_cuda_kernel.cu  nemo_bf16.cu
matmuls/fp8/marlin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
matmuls/fp8/triton/: blockwise_quant_fp8.py  blockwise_quant_with_latency.py  splitk_blockquant_fp8.py  tma_gemm_blockwise_quant_fp8.py  vectorized_quant.py
test/: plot.py  sgemm.cu
